--- a/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
+++ b/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clientes.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trabajadores.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
