--- a/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
+++ b/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Clientes.cs" />
     <Compile Include="Persona.cs" />
+    <Compile Include="Productos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trabajadores.cs" />
