--- a/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
+++ b/Laboratorio 03/Laboratorio 03/Laboratorio 03.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Productos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registro.cs" />
     <Compile Include="Trabajadores.cs" />
   </ItemGroup>
   <ItemGroup>
